data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1595.wast
;; 6. Create an infinite loop scenario where `br_if` should conditionally exit based on a multi-element stack check, mimicking real-world conditional escapes. Faulty reference handling in `wizard_engine` could lead it to misinterpret stack state, resulting in an infinite loop.

(assert_invalid
  (module (func $infinite-loop (loop (br_if 0 (i32.eq (i32.const 1) (i32.const 0))))))
  "infinite loop due to improper stack state handling"
)